[gd_scene load_steps=24 format=2]

[ext_resource path="res://objets/gameManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://objets/choix ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/pixel-blanc.jpg" type="Texture" id=5]
[ext_resource path="res://scripts/UiHumain.gd" type="Script" id=6]
[ext_resource path="res://objets/icone ui.tscn" type="PackedScene" id=7]
[ext_resource path="res://images/iconeLumiere1.png" type="Texture" id=8]
[ext_resource path="res://images/iconeJeu1.png" type="Texture" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://objets/humain.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/trappe.gd" type="Script" id=12]
[ext_resource path="res://scripts/danse.gd" type="Script" id=13]
[ext_resource path="res://objets/zone danse.tscn" type="PackedScene" id=14]
[ext_resource path="res://scripts/potager.gd" type="Script" id=15]
[ext_resource path="res://objets/zonePousse.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/zonePourHumain.gd" type="Script" id=17]
[ext_resource path="res://scripts/zoneHack.gd" type="Script" id=18]
[ext_resource path="res://objets/tama.tscn" type="PackedScene" id=19]

[sub_resource type="Animation" id=1]
resource_name = "secoue"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 521.158, 347.422 ), Vector2( 578.08, 301 ), Vector2( 513, 351.217 ), Vector2( 521.158, 347.422 ) ]
}

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1, 1 )
modulate_color = Color( 0.521569, 0.521569, 0.490196, 1 )

[sub_resource type="Animation" id=3]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("fonduNoir:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/recommencer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/quitter:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]

[node name="scene" type="Node2D"]

[node name="gameManager" parent="." instance=ExtResource( 1 )]

[node name="camera" type="Camera2D" parent="."]
editor/display_folded = true
position = Vector2( 521.158, 347.422 )
current = true
zoom = Vector2( 1.8, 1.8 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="camera"]
anims/secoue = SubResource( 1 )

[node name="Ecran" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 325.0
margin_top = 49.0
margin_right = 325.0
margin_bottom = 49.0
theme = ExtResource( 3 )

[node name="texteMilieu" type="MarginContainer" parent="Ecran"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 80.0
margin_right = -30.0
margin_bottom = -75.0

[node name="menuBouffe" type="GridContainer" parent="Ecran/texteMilieu"]
editor/display_folded = true
visible = false
columns = 2

[node name="fleche repas" type="Label" parent="Ecran/texteMilieu/menuBouffe"]
margin_right = 55.0
margin_bottom = 74.0
text = "> "

[node name="repas" parent="Ecran/texteMilieu/menuBouffe" instance=ExtResource( 4 )]

[node name="fleche snack" type="Label" parent="Ecran/texteMilieu/menuBouffe"]
margin_top = 78.0
margin_right = 55.0
margin_bottom = 152.0
text = "> "

[node name="snack" parent="Ecran/texteMilieu/menuBouffe" instance=ExtResource( 4 )]
margin_top = 78.0
margin_bottom = 152.0
text = "Snack"

[node name="RichTextLabel" type="RichTextLabel" parent="Ecran/texteMilieu/menuBouffe"]
margin_top = 156.0
margin_right = 55.0
margin_bottom = 156.0
text = "o : donne bouffe
p : ballade dans les icones
espace : manger pomme"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="jauges" type="Control" parent="CanvasLayer"]
margin_left = 30.0
margin_top = 29.0
margin_right = 267.0
margin_bottom = 189.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/jauges"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="faim t" type="Label" parent="CanvasLayer/jauges/VBoxContainer"]
margin_right = 237.0
margin_bottom = 14.0
text = "Faim :"

[node name="faim" type="ProgressBar" parent="CanvasLayer/jauges/VBoxContainer"]
margin_top = 18.0
margin_right = 237.0
margin_bottom = 32.0
custom_styles/bg = SubResource( 2 )
value = 100.0

[node name="love t" type="Label" parent="CanvasLayer/jauges/VBoxContainer"]
margin_top = 36.0
margin_right = 237.0
margin_bottom = 50.0
text = "Love :"

[node name="love" type="ProgressBar" parent="CanvasLayer/jauges/VBoxContainer"]
margin_top = 54.0
margin_right = 237.0
margin_bottom = 68.0
custom_styles/bg = SubResource( 2 )
value = 50.0

[node name="hack t" type="Label" parent="CanvasLayer/jauges/VBoxContainer"]
margin_top = 72.0
margin_right = 237.0
margin_bottom = 86.0
text = "Hack"

[node name="hack" type="ProgressBar" parent="CanvasLayer/jauges/VBoxContainer"]
margin_top = 90.0
margin_right = 237.0
margin_bottom = 104.0
custom_styles/bg = SubResource( 2 )

[node name="temps avant d√©part" type="Label" parent="CanvasLayer/jauges/VBoxContainer"]
margin_top = 108.0
margin_right = 237.0
margin_bottom = 122.0
text = "temps avant depart"

[node name="tps depart" type="ProgressBar" parent="CanvasLayer/jauges/VBoxContainer"]
margin_top = 126.0
margin_right = 237.0
margin_bottom = 140.0
custom_styles/bg = SubResource( 2 )

[node name="tuto" type="Label" parent="CanvasLayer/jauges/VBoxContainer"]
margin_top = 144.0
margin_right = 237.0
margin_bottom = 158.0
text = "interagir : espace ou e "

[node name="menu" type="Control" parent="CanvasLayer"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="fonduNoir" type="TextureRect" parent="CanvasLayer/menu"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/menu/CenterContainer"]
visible = false
margin_left = 324.0
margin_top = 284.0
margin_right = 700.0
margin_bottom = 436.0
theme = ExtResource( 3 )

[node name="Game Over" type="Label" parent="CanvasLayer/menu/CenterContainer/VBoxContainer"]
margin_right = 544.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Game Over"
align = 1

[node name="Game Over2" type="Label" parent="CanvasLayer/menu/CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 544.0
margin_bottom = 152.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1

[node name="recommencer" type="Button" parent="CanvasLayer/menu/CenterContainer/VBoxContainer"]
visible = false
margin_top = 156.0
margin_right = 544.0
margin_bottom = 236.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = " Recommencer "

[node name="quitter" type="Button" parent="CanvasLayer/menu/CenterContainer/VBoxContainer"]
visible = false
margin_top = 240.0
margin_right = 544.0
margin_bottom = 320.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Quitter"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/menu"]
"anims/game over" = SubResource( 3 )
anims/vide = SubResource( 4 )

[node name="ui humain" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 523.91, 200.422 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="TimerBougeDansUi" type="Timer" parent="ui humain"]

[node name="icones haut" type="Node2D" parent="ui humain"]
editor/display_folded = true
position = Vector2( -100.211, -117.577 )

[node name="manger" parent="ui humain/icones haut" instance=ExtResource( 7 )]
scale = Vector2( 1, 0.999999 )

[node name="lumiere" parent="ui humain/icones haut" instance=ExtResource( 7 )]
position = Vector2( 70, 0 )
scale = Vector2( 1, 0.999999 )
texture = ExtResource( 8 )

[node name="jeu" parent="ui humain/icones haut" instance=ExtResource( 7 )]
position = Vector2( 140, 0 )
scale = Vector2( 1, 0.999999 )
texture = ExtResource( 9 )

[node name="soin" parent="ui humain/icones haut" instance=ExtResource( 7 )]
position = Vector2( 210, 0 )
scale = Vector2( 1, 0.999999 )
texture = ExtResource( 8 )

[node name="icones bas" type="Node2D" parent="ui humain"]
editor/display_folded = true
position = Vector2( -100.211, 175.572 )

[node name="lumiere2" parent="ui humain/icones bas" instance=ExtResource( 7 )]
scale = Vector2( 1, 0.999999 )
texture = ExtResource( 8 )

[node name="lumiere" parent="ui humain/icones bas" instance=ExtResource( 7 )]
position = Vector2( 70, 0 )
scale = Vector2( 1, 0.999999 )
texture = ExtResource( 8 )

[node name="jeu2" parent="ui humain/icones bas" instance=ExtResource( 7 )]
position = Vector2( 140, 0 )
scale = Vector2( 1, 0.999999 )
texture = ExtResource( 8 )

[node name="soin" parent="ui humain/icones bas" instance=ExtResource( 7 )]
position = Vector2( 210, 0 )
scale = Vector2( 1, 0.999999 )
texture = ExtResource( 8 )

[node name="icones danse" type="Node2D" parent="ui humain"]
editor/display_folded = true

[node name="icon" type="Sprite" parent="ui humain/icones danse"]
visible = false
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( -103.238, 123.293 )
texture = ExtResource( 10 )

[node name="icon2" type="Sprite" parent="ui humain/icones danse"]
visible = false
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 5.59198, 121.933 )
texture = ExtResource( 10 )

[node name="icon3" type="Sprite" parent="ui humain/icones danse"]
visible = false
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 122.584, 120.573 )
texture = ExtResource( 10 )

[node name="humain" parent="." instance=ExtResource( 11 )]

[node name="decor" type="Node2D" parent="."]

[node name="pop bouffe" type="Node2D" parent="decor"]
position = Vector2( 268.827, 506.486 )

[node name="murs" type="Polygon2D" parent="decor"]
position = Vector2( 520.265, 212.301 )
scale = Vector2( 1.82577, 1.83234 )
z_index = -200
color = Color( 0.458824, 0.627451, 0.678431, 1 )
polygon = PoolVector2Array( -154.405, -193.015, -223.35, -135.31, -271.611, -21.272, -279.884, 117.497, -282.793, 216.62, -228.996, 341.45, -147.838, 386.79, 99.7633, 384.042, 241.446, 342.824, 286.84, 206.803, 259.262, -66.6122, 204.106, -169.658, 113.306, -204.51, 55.3927, -210.006, 31.9516, -95.9683, 91.2438, -86.3506, 118.822, -62.9936, 132.611, 5.70377, 136.747, 114.246, -121.105, 110.124, -125.242, 0.208, -108.695, -68.4893, -71.4653, -89.0985, -30.0985, -97.3422, 38.846, -95.9683, 60.9083, -210.006, -56.5041, -206.755 )

[node name="mur ecran" type="Polygon2D" parent="decor"]
position = Vector2( 518.997, 212.301 )
scale = Vector2( 2.15019, 1.83234 )
z_index = -110
color = Color( 0.422974, 0.593098, 0.644531, 1 )
offset = Vector2( -530.113, -241.536 )
polygon = PoolVector2Array( 409.424, 350.145, 408.092, 242.38, 423.41, 171.867, 452.17, 139.954, 505.448, 119.388, 575.551, 122.679, 623.221, 142.422, 646.355, 179.44, 661.402, 247.463, 663.836, 352.141, 642.992, 351.977, 643.616, 247.318, 631.595, 179.757, 606.921, 156, 575.92, 147.833, 505.692, 144.863, 467.732, 151.545, 438.629, 172.333, 426.608, 244.349, 427.263, 350.285 )

[node name="ecran poly" type="Polygon2D" parent="decor"]
position = Vector2( 518.997, 212.301 )
scale = Vector2( 1.83019, 1.83234 )
z_index = -400
offset = Vector2( -530.113, -241.536 )
polygon = PoolVector2Array( 409.424, 350.145, 408.092, 242.38, 423.41, 171.867, 458.042, 151.91, 503.174, 145.494, 582.584, 147.254, 616.55, 154.571, 647.852, 179.849, 661.402, 247.463, 663.836, 352.141 )

[node name="sol" type="Node2D" parent="decor"]
position = Vector2( 522.577, 413.517 )
z_index = -100

[node name="trappe" type="Area2D" parent="decor/sol"]
editor/display_folded = true
position = Vector2( 329.797, 125.877 )
z_index = 50
script = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/trappe"]
polygon = PoolVector2Array( -34.7313, -11.7252, -16.8994, 15.8332, 42.2936, 16.5018, 21.422, -11.7362 )

[node name="Polygon2D" type="Polygon2D" parent="decor/sol/trappe"]
position = Vector2( -23.9495, -18.9075 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -12.3083, 5.59711, 7.22949, 35.2189, 65.8428, 35.2189, 45.0445, 6.22736 )

[node name="dancefloor" type="Node2D" parent="decor/sol"]
editor/display_folded = true
visible = false
position = Vector2( -1000, 0 )
script = ExtResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="decor/sol/dancefloor"]

[node name="zone danse2" parent="decor/sol/dancefloor" instance=ExtResource( 14 )]
editor/display_folded = true
position = Vector2( -110.864, -0.814514 )
z_index = 10

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/dancefloor/zone danse2"]
polygon = PoolVector2Array( -36.5677, 0.80423, 59.9611, 0.369232, 33.8082, 98.5452, -95.6985, 98.5452 )

[node name="Polygon2D" type="Polygon2D" parent="decor/sol/dancefloor/zone danse2"]
color = Color( 0.996078, 1, 0.639216, 1 )
polygon = PoolVector2Array( -37.0539, -0.0102539, -95.6985, 100.174, 33.8082, 100.174, 58.5645, -0.329071 )

[node name="zone danse" parent="decor/sol/dancefloor" instance=ExtResource( 14 )]
editor/display_folded = true
position = Vector2( 10.4972, 0 )
z_index = 10
num = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/dancefloor/zone danse"]
polygon = PoolVector2Array( -36.5677, 0.80423, 50.5847, -0.0102539, 88.3803, 102.618, -50.9005, 104.247 )

[node name="Polygon2D" type="Polygon2D" parent="decor/sol/dancefloor/zone danse"]
color = Color( 0.996078, 1, 0.639216, 1 )
polygon = PoolVector2Array( -37.0539, -0.0102539, -50.9005, 103.432, 87.5658, 102.618, 50.0984, -0.824768 )

[node name="zone danse3" parent="decor/sol/dancefloor" instance=ExtResource( 14 )]
editor/display_folded = true
position = Vector2( 133.488, 0 )
z_index = 10
num = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/dancefloor/zone danse3"]
polygon = PoolVector2Array( -46.8185, 0.951416, 50.5847, -0.0102539, 125.848, 100.174, 2.85693, 100.989 )

[node name="Polygon2D" type="Polygon2D" parent="decor/sol/dancefloor/zone danse3"]
color = Color( 0.996078, 1, 0.639216, 1 )
polygon = PoolVector2Array( -46.1202, -1.14359, 5.30042, 100.989, 126.662, 100.989, 50.0984, -0.824768 )

[node name="Timer" type="Timer" parent="decor/sol/dancefloor"]

[node name="sol" type="Polygon2D" parent="decor/sol"]
z_index = -10
color = Color( 0.631373, 0.682353, 0.705882, 1 )
polygon = PoolVector2Array( -229.122, 0.861359, -263.203, -3.68277, -522.22, 187.171, 504.757, 196.26, 275.278, 5.40555, 241.197, 0.861359 )

[node name="solCoupe" type="Polygon2D" parent="decor/sol"]
color = Color( 0.631373, 0.682353, 0.705882, 1 )
polygon = PoolVector2Array( -229.122, 0.861359, -263.203, -3.68277, -522.22, 187.171, -455.5, 185.741, -260.776, 43.5606, 258.491, 40.4698, 434.67, 195.013, 504.757, 196.26, 275.278, 5.40555, 241.197, 0.861359 )

[node name="bordsSol" type="StaticBody2D" parent="decor/sol"]
editor/display_folded = true
visible = false
position = Vector2( -3.47601, 85.27 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/bordsSol"]
polygon = PoolVector2Array( 278.899, -79.7873, -261.999, -88.9527, -516.471, 101.901, 508.234, 110.99, 281.899, -78.7873, 330.9, -159.787, 615.07, 75.6555, 617.018, 194.485, -607.354, 195.057, -593.722, 54.1879, -306.343, -163.951, 328.9, -159.787 )

[node name="potager" type="Area2D" parent="decor/sol"]
editor/display_folded = true
position = Vector2( -299.801, 83.278 )
script = ExtResource( 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/potager"]
polygon = PoolVector2Array( 31.9577, -87.5712, -217.876, 95.6404, -47.619, 101.192, 107.833, -83.87 )

[node name="Polygon2D" type="Polygon2D" parent="decor/sol/potager"]
color = Color( 0.54902, 0.447059, 0.313726, 1 )
polygon = PoolVector2Array( -217.876, 93.7896, 31.9577, -87.5712, 104.132, -83.87, -49.4697, 103.043 )

[node name="zonePousse" parent="decor/sol/potager" instance=ExtResource( 16 )]
editor/display_folded = true
position = Vector2( -99.349, 60.3885 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/potager/zonePousse"]
polygon = PoolVector2Array( -71.0276, 18.4655, 51.9628, 20.9091, 75.5835, -5.96967, -40.0764, -7.59869 )

[node name="zonePousse2" parent="decor/sol/potager" instance=ExtResource( 16 )]
editor/display_folded = true
position = Vector2( -60.3885, 23.3762 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="decor/sol/potager/zonePousse2"]
position = Vector2( 16.426, -6.15649 )
polygon = PoolVector2Array( -71.0276, 18.4655, 20.1971, 18.4655, 48.7048, -5.15515, -34.3749, -4.34064 )

[node name="zonePousse3" parent="decor/sol/potager" instance=ExtResource( 16 )]
editor/display_folded = true
position = Vector2( -13.6361, -15.5842 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/potager/zonePousse3"]
polygon = PoolVector2Array( -46.7822, 9.72961, 34.6684, 10.5441, 54.2166, -4.93149, -22.347, -6.56049 )

[node name="zonePousse4" parent="decor/sol/potager" instance=ExtResource( 16 )]
position = Vector2( 21.4282, -44.8045 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/potager/zonePousse4"]
polygon = PoolVector2Array( -34.6052, 3.92621, 36.2569, 4.74069, 40.3294, -5.03339, -22.3876, -7.4769 )

[node name="zonePousse5" parent="decor/sol/potager" instance=ExtResource( 16 )]
position = Vector2( 44.8044, -68.1807 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/potager/zonePousse5"]
polygon = PoolVector2Array( -24.5866, 2.05273, 26.7273, 2.86722, 35.6868, -4.46332, -13.9981, -4.46332 )

[node name="zone pour humain" type="Area2D" parent="decor/sol"]
editor/display_folded = true
position = Vector2( 1.07019, 4.39371 )
script = ExtResource( 17 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol/zone pour humain"]
polygon = PoolVector2Array( -190.433, -0.633301, 207.337, -5.66833, 275.31, 120.208, -265.96, 117.691 )

[node name="Polygon2D" type="Polygon2D" parent="decor/sol/zone pour humain"]
position = Vector2( -1.07019, -4.39371 )
color = Color( 0.968627, 0.74902, 0.988235, 1 )
polygon = PoolVector2Array( -188.086, 2.76123, -260.458, 122.95, 271.993, 125.535, 211.252, 4.05359 )

[node name="sol bas" type="Node2D" parent="decor"]
editor/display_folded = true
position = Vector2( 522.577, 614.47 )
z_index = -100

[node name="trappe2" type="Area2D" parent="decor/sol bas"]
editor/display_folded = true
position = Vector2( 342.748, 125.662 )
z_index = 50
script = ExtResource( 12 )
haut = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol bas/trappe2"]
polygon = PoolVector2Array( -34.7313, -11.7252, -16.8994, 15.8332, 42.2936, 16.5018, 21.422, -11.7362 )

[node name="Polygon2D" type="Polygon2D" parent="decor/sol bas/trappe2"]
position = Vector2( -23.9495, -18.9075 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -12.3083, 5.59711, 7.22949, 35.2189, 65.8428, 35.2189, 45.0445, 6.22736 )

[node name="sol Bas poly" type="Polygon2D" parent="decor/sol bas"]
position = Vector2( 11.4745, -7.15256e-007 )
scale = Vector2( 0.872527, 1 )
color = Color( 0.470588, 0.529412, 0.552941, 1 )
polygon = PoolVector2Array( -229.122, 0.861359, -263.203, -3.68277, -522.22, 187.171, 504.757, 196.26, 275.278, 5.40555, 241.197, 0.861359 )

[node name="bordsSol2" type="StaticBody2D" parent="decor/sol bas"]
editor/display_folded = true
visible = false
position = Vector2( -3.47601, 85.223 )
collision_layer = 0
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/sol bas/bordsSol2"]
polygon = PoolVector2Array( 252.973, -85.8007, -220.324, -88.3182, -449.42, 100.497, 461.928, 108.05, 260.525, -80.7656, 330.9, -159.787, 615.07, 75.6555, 617.018, 194.485, -607.354, 195.057, -593.722, 54.1879, -306.343, -163.951, 328.9, -159.787 )

[node name="zone hack" type="Area2D" parent="decor"]
editor/display_folded = true
position = Vector2( 885.058, 418.332 )
script = ExtResource( 18 )

[node name="feedback" type="Sprite" parent="decor/zone hack"]
position = Vector2( 5.84399, -42.8564 )
scale = Vector2( 14.28, 14.28 )
texture = ExtResource( 5 )

[node name="Polygon2D" type="Polygon2D" parent="decor/zone hack"]
color = Color( 0.360784, 0.403922, 0.407843, 1 )
polygon = PoolVector2Array( -16.6701, 55.2392, -12.7741, -22.6816, 35.9263, -26.5776, 16.4461, 88.3555 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="decor/zone hack"]
polygon = PoolVector2Array( -26.4102, 45.4991, -71.2147, 41.603, -73.1627, 66.9273, -36.1503, 100.044, 26.1862, 94.1995 )

[node name="fond noir" type="Polygon2D" parent="decor"]
z_index = -1000
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -618.465, -596.287, -599.491, 1232.8, 1749.48, 1217.62, 1738.09, -611.466 )

[node name="tama" parent="." instance=ExtResource( 19 )]
position = Vector2( 412.688, 531.127 )
z_index = 20
